--- a/frontend/templates/pagina/inventario.html
+++ b/frontend/templates/pagina/inventario.html
@@ -1,4 +1,11 @@
-<!--PASO 3-->
+<!--PASO 3 del FrontEnd-->
+{% extends 'base.html' %}
+
+<!--Título-->
+{% block titulo %}Inventario{% endblock%}
+
+<!--Contenido-->
+{% block contenido %}
 
 <!DOCTYPE html>
 <html lang="es">
@@ -42,3 +49,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
+{% endblock %}
