--- a/frontend/templates/carrito.html
+++ b/frontend/templates/carrito.html
@@ -38,4 +38,12 @@
   </p>
 </div>
 
+<div class="text-center mt-4">
+  <a
+    href="{% url 'iniciar_pago' pedido.pedido_id %}"
+    class="btn btn-primary btn-lg"
+    >💳 Pagar ahora</a
+  >
+</div>
+
 {% endblock %}
