--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -11,7 +11,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    {% block extra_css %}{% endblock %}
+    {% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/sistema.css' %}" />
+    {% endblock %}
   </head>
   <body>
     <!-- NAVBAR -->
