--- a/frontend/templates/pagina/sistema.html
+++ b/frontend/templates/pagina/sistema.html
@@ -2,7 +2,7 @@
 
 <!--Pestaña-->
 
-{% block titulo %}Inventario{% endblock %} {% block contenido %}
+{% block titulo %}Bodega - Pedidos{% endblock %} {% block contenido %}
 <style>
   .wrapper {
     display: flex;
@@ -10,13 +10,12 @@
   }
 
   .sidebar {
-    /* Metí mano */
-    width: 150px; /* Ancho fijo para la barra lateral */
+    width: 150px;
     background-color: #343a40;
     color: white;
-    padding-top: 10px; /* Letras bajan */
+    padding-top: 10px;
     position: fixed;
-    top: 65px; /* Espacio para navbar */
+    top: 65px;
     left: 0;
     bottom: 0;
   }
@@ -34,7 +33,7 @@
 
   .main-content {
     margin-left: 200px;
-    padding: 80px 30px 30px; /* espacio para navbar y margen interior */
+    padding: 80px 30px 30px;
     width: 100%;
   }
 
@@ -53,26 +52,26 @@
 
   <!-- MAIN CONTENT -->
   <div class="main-content">
-    <h2>Inventario de <strong>{{ sucursal.nombre_sucursal }}</strong></h2>
+    <h2>Bodega de <strong>Puerto Varas</strong></h2>
 
     <table class="table table-striped table-bordered mt-4">
       <thead class="table-dark">
         <tr>
-          <th>ID</th>
-          <th>Producto</th>
-          <th>Marca</th>
-          <th>Precio</th>
-          <th>Cantidad Disponible</th>
+          <th>Pedido ID</th>
+          <th>Cliente</th>
+          <th>Fecha</th>
+          <th>Total</th>
+          <th>Tipo de entrega</th>
         </tr>
       </thead>
       <tbody>
-        {% for item in inventario %}
+        {% for pedido in pedidos %}
         <tr>
-          <td>{{ item.producto_id }}</td>
-          <td>{{ item.nombre }}</td>
-          <td>{{ item.marca }}</td>
-          <td>${{ item.precio }}</td>
-          <td>{{ item.stock }}</td>
+          <td>{{ pedido.pedido_id }}</td>
+          <td>{{ pedido.cliente.nombre }}</td>
+          <td>{{ pedido.fecha }}</td>
+          <td>${{ pedido.total }}</td>
+          <td>{{ pedido.tipo_entrega }}</td>
         </tr>
         {% endfor %}
       </tbody>
