--- a/frontend/templates/pagos_app/exito.html
+++ b/frontend/templates/pagos_app/exito.html
@@ -7,6 +7,8 @@
   <p class="fs-4">Gracias por tu compra.</p>
   <p>Pedido N° <strong>{{ pedido.pedido_id }}</strong></p>
   <p>Monto pagado: <strong>${{ pedido.total|floatformat:0 }}</strong></p>
-  <a href="/" class="btn btn-success mt-4">Volver al inicio</a>
+  <a href="http://127.0.0.1:8000/productos/lista/" class="btn btn-success mt-4"
+    >Volver al inicio</a
+  >
 </div>
 {% endblock %}
