--- a/frontend/templates/pagina/sistema.html
+++ b/frontend/templates/pagina/sistema.html
@@ -1,80 +1,38 @@
 {% extends 'base_interno.html' %} {% load custom_filters %}
-
 <!--Pestaña-->
-
 {% block titulo %}Bodega - Pedidos{% endblock %} {% block contenido %}
-<style>
-  .wrapper {
-    display: flex;
-    height: 100vh;
-  }
+<h2 class="text-center mt-4">Bodega de <strong>Puerto Varas</strong></h2>
 
-  .sidebar {
-    width: 150px;
-    background-color: #343a40;
-    color: white;
-    padding-top: 10px;
-    position: fixed;
-    top: 65px;
-    left: 0;
-    bottom: 0;
-  }
-
-  .sidebar a {
-    display: block;
-    padding: 15px;
-    color: white;
-    text-decoration: none;
-  }
-
-  .sidebar a:hover {
-    background-color: #495057;
-  }
-
-  .main-content {
-    margin-left: 200px;
-    padding: 80px 30px 30px;
-    width: 100%;
-  }
-
-  h2 {
-    text-align: center;
-  }
-</style>
-  <!-- MAIN CONTENT -->
-  <div class="main-content">
-    <h2>Bodega de <strong>Puerto Varas</strong></h2>
-
-    <table class="table table-striped table-bordered mt-4">
-      <thead class="table-dark">
-        <tr>
-          <th>Pedido ID</th>
-          <th>Cliente</th>
-          <th>Fecha</th>
-          <th>Estado del pedido</th>
-          <th>Tipo de entrega</th>
-          <th>Ver detalle</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for pedido in pedidos %}
-        <tr>
-          <td>{{ pedido.pedido_id }}</td>
-          <td>{{ pedido.cliente.nombre }}</td>
-          <td>{{ pedido.fecha }}</td>
-          <td>{{ estado_actual|get_item:pedido.pedido_id }}</td>
-          <td>{{ pedido.tipo_entrega }}</td>
-          <td>
-            <a
-              href="{% url 'detalle_pedido' pedido.pedido_id %}"
-              class="btn btn-sm btn-info"
-              >Ver Detalle</a
-            >
-          </td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
+<div class="table-responsive mt-4">
+  <table class="table table-striped table-bordered">
+    <thead class="table-dark">
+      <tr>
+        <th>Pedido ID</th>
+        <th>Cliente</th>
+        <th>Fecha</th>
+        <th>Estado del pedido</th>
+        <th>Tipo de entrega</th>
+        <th>Ver detalle</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for pedido in pedidos %}
+      <tr>
+        <td>{{ pedido.pedido_id }}</td>
+        <td>{{ pedido.cliente.nombre }}</td>
+        <td>{{ pedido.fecha }}</td>
+        <td>{{ estado_actual|get_item:pedido.pedido_id }}</td>
+        <td>{{ pedido.tipo_entrega }}</td>
+        <td>
+          <a
+            href="{% url 'detalle_pedido' pedido.pedido_id %}"
+            class="btn btn-sm btn-info"
+            >Ver Detalle</a
+          >
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 </div>
 {% endblock %}
