--- a/frontend/templates/registro.html
+++ b/frontend/templates/registro.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}{% load widget_tweaks %}
-<!---->
+<!--Pestaña-->
 {% block titulo %}Registro{%endblock %}
-<!---->
+<!--Parte 2: Registro de cliente 🤗-->
 {% block subtitulo %}
 <h2 class="text-center mb-4">Registro de Cliente</h2>
 {% endblock %}
