--- a/frontend/templates/pagina/detalle_pedido.html
+++ b/frontend/templates/pagina/detalle_pedido.html
@@ -2,16 +2,23 @@
 <!--Pestaña-->
 {% block titulo %}Detalle del Pedido{% endblock %}
 <!--Barra lateral-->
-{% block sidebar %}
-<a href="/bodega/">Bodega</a>
-<a href="/pedidos/">Pedidos</a>
-<a href="/inventario/6/">Inventarios</a>
-{% endblock %} {% block contenido %}
+{% block contenido %}
 <div class="container mt-4">
-  <h3>Detalle del Pedido N° {{ pedido.pedido_id }}</h3>
-  <p><strong>Cliente:</strong> {{ pedido.cliente.nombre }}</p>
-  <p><strong>Fecha:</strong> {{ pedido.fecha }}</p>
-  <p><strong>Total:</strong> ${{ pedido.total }}</p>
+  <div class="row">
+    <h3>Detalle del Pedido N° {{ pedido.pedido_id }}</h3>
+    <!-- Columna izquierda -->
+    <div class="col">
+      <p><strong>Cliente:</strong> {{ pedido.cliente.nombre }}</p>
+      <p><strong>Fecha:</strong> {{ pedido.fecha }}</p>
+      <p><strong>Tipo de Entrega:</strong> {{ pedido.tipo_entrega }}</p>
+    </div>
+
+    <!-- Columna derecha (alineada derecha) -->
+    <div class="col text-end">
+      <p><strong>Dólar usado:</strong> {{ pedido.valor_dolar_usado }}</p>
+      <p><strong>Total en dólares:</strong> {{ pedido.total_usd }}</p>
+    </div>
+  </div>
 
   <table class="table table-bordered mt-4">
     <thead class="table-dark">
@@ -28,9 +35,15 @@
         <td>{{ d.producto.nombre_producto }}</td>
         <td>{{ d.cantidad }}</td>
         <td>${{ d.precio_unitario }}</td>
-        <td>${{ d.total_linea }}</td>
+        <td>${{ d.total }}</td>
+        </td>
       </tr>
       {% endfor %}
+      <!-- Fila de Total -->
+    <tr>
+      <td colspan="3" style="text-align: right;"><strong>Total del pedido:</strong></td>
+      <td><strong>${{ pedido.total }}</strong></td>
+    </tr>
     </tbody>
   </table>
 
@@ -41,19 +54,17 @@
       <tr>
         <th>Estado</th>
         <th>Fecha</th>
-        <th>Observaciones</th>
+        <th>Usuario</th>
+        <th>Tipo</th>
       </tr>
     </thead>
     <tbody>
-      {% for estado in historial %}
+      {% for h in historial %}
       <tr>
-        <td>{{ estado.estado.nombre_estado }}</td>
-        <td>{{ estado.fecha }}</td>
-        <td>{{ estado.observacion }}</td>
-      </tr>
-      {% empty %}
-      <tr>
-        <td colspan="3">Sin historial de estado.</td>
+        <td>{{ h.estado }}</td>
+        <td>{{ h.fecha }}</td>
+        <td>{{ h.actor }}</td>
+        <td>{{ h.actor_tipo}}</td>
       </tr>
       {% endfor %}
     </tbody>
@@ -76,12 +87,14 @@
         {% endfor %}
       </select>
     </div>
-    <div class="mb-3">
-      <input type="text" name="observacion" class="form-control" />
-    </div>
     <button type="submit" class="btn btn-success">Actualizar Estado</button>
   </form>
 
-  <a href="{% url 'sistema_bodega' %}" class="btn btn-secondary">⬅ Volver</a>
+
+  <div class="text-center mt-4">
+    <a href="{% url 'sistema_bodega' %}" class="btn btn-secondary">⬅ Volver</a>
+  </div>
+
+
 </div>
 {% endblock %}
