--- a/frontend/templates/pagina/mostrar_productos.html
+++ b/frontend/templates/pagina/mostrar_productos.html
@@ -3,7 +3,9 @@
 {% block titulo %}Administrar productos{% endblock %} {% block contenido %}
 <div class="d-flex justify-content-between align-items-center mb-4">
   <h2>Lista de Productos</h2>
-  <a href="/" class="btn btn-success">+ Nuevo Producto</a>
+  <a href="{% url 'nuevo_producto' %}" class="btn btn-success"
+    >+ Nuevo Producto</a
+  >
 </div>
 
 <table class="table table-bordered table-hover table-striped">
@@ -26,9 +28,13 @@
       <td>{{ producto.precio }}</td>
       <td>{{ producto.stock }}</td>
       <td>
-        <a href="/" class="btn btn-sm btn-primary">Editar</a>
         <a
-          href="/"
+          href="{% url 'editar_producto' producto.producto_id %}"
+          class="btn btn-sm btn-primary"
+          >Editar</a
+        >
+        <a
+          href="{% url 'eliminar_producto' producto.producto_id %}"
           class="btn btn-sm btn-danger"
           onclick="return confirm('¿Seguro que deseas eliminar este producto?')"
           >Eliminar</a
