--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -50,10 +50,42 @@
               >
             </li>
             {% if user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link disabled" style="color: #198754">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle text-success"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
                 👤 {{ user.cliente.nombre }}
               </a>
+              <ul
+                class="dropdown-menu dropdown-menu-end"
+                aria-labelledby="navbarDropdown"
+              >
+                <li>
+                  <a class="dropdown-item" href="/cliente/perfil/"
+                    >👤 Mi perfil</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="/pedidos/historial/{{ user.cliente.cliente_id }}/"
+                    >📦 Mis pedidos</a
+                  >
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a
+                    class="dropdown-item text-danger"
+                    href="/api/clientes/logout/"
+                    >🔓 Cerrar sesión</a
+                  >
+                </li>
+              </ul>
             </li>
             {% endif %} {% if user.is_authenticated %}
             <li class="nav-item">
